--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-prettytable==3.7.0
+colorama==0.4.6
+Flask==2.2.2
+prettytable==3.9.0
+psutil==5.9.4
 pycryptodomex==3.11.0
 randomname==0.2.1
-rich==13.4.1
+rich==13.7.0
