--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 colorama==0.4.6
 Flask==2.2.5
-prettytable==3.9.0
+Flask==2.2.2
+halo==0.0.31
+prettytable==3.10.0
 psutil==5.9.4
-pycryptodomex==3.11.0
+pycryptodomex==3.19.1
 randomname==0.2.1
-rich==13.7.0
-werkzeug>=2.3.8 # not directly required, pinned by Snyk to avoid a vulnerability
+rich==13.7.1
+Werkzeug==2.2.2
