--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 colorama==0.4.6
-Flask==2.2.5
 Flask==2.2.2
 halo==0.0.31
 prettytable==3.10.0
 psutil==5.9.4
-pycryptodomex==3.19.1
+pycryptodomex==3.11.0
 randomname==0.2.1
 rich==13.7.1
-Werkzeug>=2.3.8
+Werkzeug==2.2.2
